--- a/CODE/bum/src/main/resources/templates/user-dashboard.html
+++ b/CODE/bum/src/main/resources/templates/user-dashboard.html
@@ -158,10 +158,10 @@
                                 <a class="btn btn-outline-success w-100" th:href="@{/dashboard/user/licenses}"><i class="fas fa-ticket"></i> License của tôi</a>
                             </div>
                             <div class="col-6">
-                                <a class="btn btn-outline-dark w-100" th:href="@{/dashboard/user}"><i class="fas fa-cart-arrow-down"></i> Đơn hàng của tôi</a>
+                                <a class="btn btn-outline-dark w-100" th:href="@{/orders}"><i class="fas fa-cart-arrow-down"></i> Đơn hàng của tôi</a>
                             </div>
                             <div class="col-6">
-                                <a class="btn btn-outline-secondary w-100" th:href="@{/dashboard/user}"><i class="fas fa-user"></i> Thông tin cá nhân</a>
+                                <a class="btn btn-outline-secondary w-100" th:href="@{/profile}"><i class="fas fa-user"></i> Thông tin cá nhân</a>
                             </div>
                         </div>
                     </div>
